--- a/FirstApp.WEB/Views/Products/Index.cshtml
+++ b/FirstApp.WEB/Views/Products/Index.cshtml
@@ -2,4 +2,15 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["Title"] = "Products";
 }
+
+<div class="container">
+    <ul>
+        @{ if (ViewData["testData"] != null)
+            {
+               <li>@ViewData["testData"]</li>
+            }
+        }
+    </ul>
+</div>
