--- a/FirstApp.WEB/Views/Home/Index.cshtml
+++ b/FirstApp.WEB/Views/Home/Index.cshtml
@@ -1,8 +1,40 @@
-﻿@{
+﻿@section Styles {
+    <link href=@Url.Content("~/css/homeStyle.css") rel="stylesheet" />
+}
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    
-</div>
+    <div id="carouselExampleIndicators" class="carousel slide container-fluid full-width" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="@Url.Content("~/images/home/hero1.jpg")" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="@Url.Content("~/images/home/hero2.jpg")" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="@Url.Content("~/images/home/hero3.jpg")" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+<section class="featured">
+    <div class="d-flex justify-content-center pt-4">
+        <h1>Welcome to the Shop!</h1>
+    </div>
+</section>
