--- a/FirstApp.WEB/Views/Home/Shop.cshtml
+++ b/FirstApp.WEB/Views/Home/Shop.cshtml
@@ -1,6 +1,98 @@
-﻿@{
+﻿@model IReadOnlyList<ProductDto>
+@section Styles {
+    <link href=@Url.Content("~/css/shopStyle.css") rel="stylesheet" />
+}
+@{
     ViewData["Title"] = "Shop";
 }
 
-<h1>Shop</h1>
+<div class="container mt-3">
+    <div class="row">
 
+        <section class="col-3">
+            <ng-container *ngIf="types && brands">
+                <h5 class="text-warning ml-3 mt-4 mb-2">Sort</h5>
+                <select class="custom-select mb-4" (change)="onSortSelected($event.target.value)">
+                    <option *ngFor="let sort of sortOptions"
+                            [value]="sort.value">
+                        {{sort.name}}
+                    </option>
+                </select>
+
+                <h5 class="text-warning ml-3">Brands</h5>
+                <ul class="list-group my-3">
+                    <li class="list-group-item"
+                        *ngFor="let brand of brands"
+                        [class.active]="brand.id === this.shopParams.brandId"
+                        [value]="brand.id"
+                        (click)="onBrandSelected(brand.id)">
+                        {{brand.name}}
+                    </li>
+                </ul>
+                <h5 class="text-warning ml-3">Types</h5>
+                <ul class="list-group my-3">
+                    <li class="list-group-item"
+                        *ngFor="let type of types"
+                        [class.active]="type.id === this.shopParams.typeId"
+                        [value]="type.id"
+                        (click)="onTypeSelected(type.id)">
+                        {{type.name}}
+                    </li>
+                </ul>
+            </ng-container>
+        </section>
+
+        <section class="col-9">
+            <div class="d-flex justify-content-between align-items-center pb2">
+
+                <!-- Input fields into pagin-header conponent-->
+                <app-paging-header [totalCount]="totalCount"
+                                   [pageSize]="this.shopParams.pageSize"
+                                   [pageNumber]="this.shopParams.pageNumber"></app-paging-header>
+
+                <div class="form-inline" *ngIf="products">
+                    <input (keyup.enter)="onSearch()" class="form-control mr-2" #search style="width: 300px;" placeholder="Search"
+                           type="text">
+
+                    <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
+                    <button (click)="onReset()" class="btn btn-outline-success ml-2 my-2">Reset</button>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-4 mb-4" *ngFor="let item of products">
+                    @{
+                        foreach (var product in Model)
+                        {
+                            <div class="card h-100 box-shadow">
+
+                                <div class="image position-relative" style="cursor: pointer;">
+                                    <img src="@Url.Content(product.PictureUrl)" alt="@product.Name" class="img-fluid bg-info">
+                                    <div class="d-flex align-items-center justify-content-center hover-overlay">
+                                        <button type="button" class="btn btn btn-primary fa fa-shopping-cart mr-2"></button>
+                                        <button type="button" class="btn btn btn-primary">View</button>
+                                    </div>
+                                </div>
+
+                                <div class="card-body d-flex flex-column">
+                                    <a>
+                                        <h6 class="text-uppercase">@product.Name</h6>
+                                    </a>
+                                    <span class="mb-2">@product.Price</span>
+                                </div>
+                            </div>
+                        }
+                    }
+                </div>
+            </div>
+
+            <div class="d-flex justify-content-center" *ngIf="totalCount && totalCount > 0">
+                <app-pager [pageSize]="shopParams.pageSize"
+                           [totalCount]="totalCount"
+                           (pageChanged)="onPageChanged($event)"></app-pager>
+            </div>
+
+        </section>
+
+    </div>
+</div>
