--- a/FirstApp.WEB/Views/Shared/_Layout.cshtml
+++ b/FirstApp.WEB/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - TEST SHOP</a>
+            &copy; 2021 - TEST SHOP
         </div>
     </footer>
 
