--- a/FirstApp.WEB/Views/_ViewImports.cshtml
+++ b/FirstApp.WEB/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using FirstApp
 @using FirstApp.Models
+@using FirstApp.WEB.Models
 @using FirstApp.Application.DTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
