--- a/FirstApp.WEB/Views/Admin/Edit.cshtml
+++ b/FirstApp.WEB/Views/Admin/Edit.cshtml
@@ -1,10 +1,13 @@
-﻿@model ProductDto
+﻿@model ProductEditViewModel
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
-    var Brands = (List<ProductBrandDto>)ViewBag.Brands;
-    var Types = (List<ProductTypeDto>)ViewBag.Types;
+    //var Brands = (List<ProductBrandDto>)ViewBag.Brands;
+    //var Types = (List<ProductTypeDto>)ViewBag.Types;
+
+    var SelectBrands = (IEnumerable<SelectListItem>)ViewBag.Brands;
+    var SelectTypes = (IEnumerable<SelectListItem>)ViewBag.Types;
 }
 
 <section class="product-edit mt-5">
@@ -13,78 +16,48 @@
             <div class="col-lg-8">
                 <form asp-action="Edit" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="ProductDto.Id" />
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label asp-for="Name">Product Name</label>
+                            <label asp-for="ProductDto.Name">Product Name</label>
                             <input required
-                                   asp-for="Name"
+                                   asp-for="ProductDto.Name"
                                    type="text"
                                    class="form-control"
                                    placeholder="Product Name">
-                            <span asp-validation-for="Name"></span>
+                            <span asp-validation-for="ProductDto.Name"></span>
                         </div>
                         <div class="form-group col-md-6">
-                            <label asp-for="Price">Price</label>
+                            <label asp-for="ProductDto.Price">Price</label>
                             <input required
-                                   asp-for="Price"                                   
-                                   type="text"
+                                   asp-for="ProductDto.Price"
+                                   type="number"
                                    class="form-control"
                                    placeholder="Price"
-                                   currencyMask
                                    pattern="^\$?([0-9]{1,3},([0-9]{3},)*[0-9]{3}|[0-9]+)(\.[0-9][0-9])?$"
                                    min="0.01">
-                            <span asp-validation-for="Price"></span>
+                            <span asp-validation-for="ProductDto.Price"></span>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-12">
-                            <label asp-for="Description">Description</label>
+                            <label asp-for="ProductDto.Description">Description</label>
                             <textarea required
-                                      asp-for="Description"
+                                      asp-for="ProductDto.Description"
                                       class="form-control"
                                       rows="3"></textarea>
-                            <span asp-validation-for="Description"></span>
+                            <span asp-validation-for="ProductDto.Description"></span>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="brand">Brand</label>
-                            <select id="brand" class="form-control" name="productBrandId" required>
-                                @foreach (ProductBrandDto productBrand in Brands)
-                                {
-                                    if (productBrand.Name == Model.ProductBrand)
-                                    {
-                                        <option selected>
-                                            @productBrand.Name
-                                        </option>
-                                    }
-                                    else
-                                    {
-                                        <option>
-                                            @productBrand.Name
-                                        </option>
-                                    }
-                                }
+                            <label asp-for="ProductBrandId">Brand</label>
+                            <select asp-for="ProductBrandId" asp-items="SelectBrands" class="form-control" required>
                             </select>
                         </div>
                         <div class="form-group col-md-6">
-                            <label for="type">Type</label>
-                            <select id="type" class="form-control" name="productTypeId" required>
-                                @foreach (ProductTypeDto productType in Types)
-                                {
-                                    if (productType.Name == Model.ProductType)
-                                    {
-                                        <option selected>
-                                            @productType.Name
-                                        </option>
-                                    }
-                                    else
-                                    {
-                                        <option>
-                                            @productType.Name
-                                        </option>
-                                    }
-                                }
+                            <label asp-for="ProductTypeId">Type</label>
+                            <select asp-for="ProductTypeId" asp-items="SelectTypes" class="form-control" required>
                             </select>
                         </div>
                     </div>
@@ -92,6 +65,11 @@
                 </form>
             </div>
         </div>
+
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
+
     </div>
 </section>
 
