--- a/FirstApp.WEB/Views/Admin/Index.cshtml
+++ b/FirstApp.WEB/Views/Admin/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="row d-flex justify-content-between my-3">
         <header class="h2">Product List</header>
-        <button class="btn btn-outline-success">Create new product</button>
+        <a asp-action="Create" class="btn btn-outline-success">Create new product</a>
     </div>
     @if (Model.Any())
     {
