--- a/FirstApp.WEB/Views/Admin/Create.cshtml
+++ b/FirstApp.WEB/Views/Admin/Create.cshtml
@@ -7,6 +7,8 @@
     var SelectTypes = (IEnumerable<SelectListItem>)ViewBag.Types;
 }
 
+<h1>Create</h1>
+
 <section class="product-edit mt-5">
     <div class="container">
         <div class="row">
