--- a/FirstApp.WEB/Views/Admin/Edit.cshtml
+++ b/FirstApp.WEB/Views/Admin/Edit.cshtml
@@ -10,6 +10,8 @@
     var SelectTypes = (IEnumerable<SelectListItem>)ViewBag.Types;
 }
 
+<h1>Edit</h1>
+
 <section class="product-edit mt-5">
     <div class="container">
         <div class="row">
