--- a/FirstApp.WEB/Views/Home/Shop.cshtml
+++ b/FirstApp.WEB/Views/Home/Shop.cshtml
@@ -60,27 +60,27 @@
             </div>
 
             <div class="row">
-                <div class="col-4 mb-4" *ngFor="let item of products">
+                <div class="col-4 mb-4">
                     @{
                         foreach (var product in Model)
                         {
-                            <div class="card h-100 box-shadow">
+                        <div class="card box-shadow">
 
-                                <div class="image position-relative" style="cursor: pointer;">
-                                    <img src="@Url.Content(product.PictureUrl)" alt="@product.Name" class="img-fluid bg-info">
-                                    <div class="d-flex align-items-center justify-content-center hover-overlay">
-                                        <button type="button" class="btn btn btn-primary fa fa-shopping-cart mr-2"></button>
-                                        <button type="button" class="btn btn btn-primary">View</button>
-                                    </div>
-                                </div>
-
-                                <div class="card-body d-flex flex-column">
-                                    <a>
-                                        <h6 class="text-uppercase">@product.Name</h6>
-                                    </a>
-                                    <span class="mb-2">@product.Price</span>
+                            <div class="image position-relative" style="cursor: pointer;">
+                                <img src="@Url.Content(product.PictureUrl)" alt="@product.Name" class="img-fluid bg-info">
+                                <div class="d-flex align-items-center justify-content-center hover-overlay">
+                                    <button type="button" class="btn btn btn-primary fa fa-shopping-cart mr-2"></button>
+                                    <button type="button" class="btn btn btn-primary">View</button>
                                 </div>
                             </div>
+
+                            <div class="card-body d-flex flex-column">
+                                <a>
+                                    <h6 class="text-uppercase">@product.Name</h6>
+                                </a>
+                                <span class="mb-2">@product.Price</span>
+                            </div>
+                        </div>
                         }
                     }
                 </div>
