--- a/FirstApp.WEB/Views/_ViewImports.cshtml
+++ b/FirstApp.WEB/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using FirstApp.Models
 @using FirstApp.WEB.Models
 @using FirstApp.Application.DTOs
+@using Microsoft.AspNetCore.Identity
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
