--- a/FirstApp.WEB/Views/Admin/EditRole.cshtml
+++ b/FirstApp.WEB/Views/Admin/EditRole.cshtml
@@ -48,8 +48,8 @@
             }
         </div>
         <div class="card-footer">
-            <a href="#" class="btn btn-primary">Add Users</a>
-            <a href="#" class="btn btn-primary">Delete Users</a>
+            <a asp-action="EditUsersInRole" asp-controller="Admin"
+               asp-route-roleId="@Model.Id" class="btn btn-primary">Add or Remove Users</a>
         </div>
     </div>
 </form>
